feat: add data initializers for Project, Employee, and TimeRecord entities
- Implemented CommandLineRunner classes to initialize sample data for project, employee, and time_record tables.
- Ensured TimeRecordDataInitializer runs after other initializers using @Order.
- Improved lookup logic for related entities to ensure correct data insertion.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=YSFunHR
 management.endpoints.web.exposure.include=*
-spring.datasource.url=jdbc:postgresql://postgres_ysffunhr:5432/ysffunhr
+spring.datasource.url=jdbc:postgresql://localhost:5433/ysffunhr
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=none
